<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.choicehumanitarian.reports</groupId>
	<artifactId>choice-reports</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>CHOICE Humanitarian Reports</name>
	<description>CHOICE Humanitarian report generation and management tool. </description>

	<properties>
		<vertx.launcher>org.choicehumanitarian.reports.enus.vertx.MainVerticle</vertx.launcher>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- maven plugin versions -->
		<maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
		<vertx-maven-plugin.version>1.0.18</vertx-maven-plugin.version>
		<vertx-lang-ceylon.version>3.4.1</vertx-lang-ceylon.version>
		<ceylon-lang.version>1.3.2</ceylon-lang.version>
		<build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
		<exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
		<vertx.version>4.2.3</vertx.version>
		<handlebars-maven-plugin.version>4.2.0</handlebars-maven-plugin.version>
		<apache-curator.version>4.3.0</apache-curator.version>
		<postgresql.version>42.2.2.jre7</postgresql.version>
		<solr.version>8.4.1</solr.version>
		<junit.version>4.13.1</junit.version>
		<computate-search.version>1.0.4</computate-search.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>io.vertx</groupId>
				<artifactId>vertx-dependencies</artifactId>
				<version>${vertx.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- ############## -->
		<!-- Apache Commons -->
		<!-- ############## -->

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.7</version>
		</dependency>

		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
			<version>1.7</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.8</version>
		</dependency>

		<!-- ########## -->
		<!-- PostgreSQL -->
		<!-- ########## -->

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>

		<!-- Apache Curator -->
		<dependency>
			<groupId>org.apache.curator</groupId>
			<artifactId>curator-client</artifactId>
			<version>${apache-curator.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.curator</groupId>
			<artifactId>curator-framework</artifactId>
			<version>${apache-curator.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.curator</groupId>
			<artifactId>curator-recipes</artifactId>
			<version>${apache-curator.version}</version>
		</dependency>

		<!-- ################# -->
		<!-- Flying Saucer PDF -->
		<!-- ################# -->

		<dependency>
			<groupId>org.xhtmlrenderer</groupId>
			<artifactId>flying-saucer-core</artifactId>
			<version>9.1.19</version>
		</dependency>

		<dependency>
			<groupId>org.xhtmlrenderer</groupId>
			<artifactId>flying-saucer-swt</artifactId>
			<version>9.1.19</version>
		</dependency>

		<dependency>
			<groupId>org.xhtmlrenderer</groupId>
			<artifactId>flying-saucer-pdf-itext5</artifactId>
			<version>9.1.19</version>
		</dependency>

		<dependency>
			<groupId>com.github.librepdf</groupId>
			<artifactId>openpdf</artifactId>
			<version>1.3.11</version>
		</dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itext-asian</artifactId>
			<version>5.2.0</version>
		</dependency>

		<!-- ###### -->
		<!-- Vert.X -->
		<!-- ###### -->

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-core</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.ceylon-lang</groupId>
					<artifactId>ceylon-complete</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-web</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-web-templ-handlebars</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-zookeeper</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-pg-client</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-auth-oauth2</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-reactive-streams</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-web-openapi</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-codegen</artifactId>
			<classifier>processor</classifier>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-service-proxy</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-web-api-service</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-web-client</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-mail-client</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-jdbc-client</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-config</artifactId>
		</dependency>
		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-config-yaml</artifactId>
		</dependency>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-health-check</artifactId>
		</dependency>

		<!-- ###### -->
		<!-- Charts -->
		<!-- ###### -->

		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.0</version>
		</dependency>

		<!-- ############### -->
		<!-- Time Scheduling -->
		<!-- ############### -->

		<dependency>
			<!-- Ceylon lang dependency is required to have CeylonVerticleFactory which is used to instantiate Ceylon verticles -->
			<groupId>io.vertx</groupId>
			<artifactId>vertx-lang-ceylon</artifactId>
			<version>${vertx-lang-ceylon.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.ceylon-lang</groupId>
					<artifactId>ceylon-complete</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<!-- Set Ceylon dependency to version 1.3.2 -->
			<groupId>org.ceylon-lang</groupId>
			<artifactId>ceylon-complete</artifactId>
			<version>${ceylon-lang.version}</version>
		</dependency>

		<!-- ######### -->
		<!-- Computate -->
		<!-- ######### -->

		<!--dependency>
			<groupId>org.computate.search</groupId>
			<artifactId>computate-search</artifactId>
			<version>${computate-search.version}</version>
		</dependency-->

		<!-- ############ -->
		<!-- Unit Testing -->
		<!-- ############ -->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>

		<!-- Source Directory Configuration -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>

			<!-- Vert.X Code Generation -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<annotationProcessors>
						<annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
					</annotationProcessors>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>${build-helper-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/gen/java</source>
								<source>target/generated-sources/annotations</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.reactiverse</groupId>
				<artifactId>vertx-maven-plugin</artifactId>
				<version>${vertx-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>vmp</id>
						<goals>
							<goal>initialize</goal>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<redeploy>true</redeploy>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
